--- a/samples/Samples.Server/Samples.Server.csproj
+++ b/samples/Samples.Server/Samples.Server.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleServerBootstrapper.cs" />
+    <Compile Include="Stores\PackageStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -63,10 +64,6 @@
     <ProjectReference Include="..\..\source\Drey.Server\Drey.Server.csproj">
       <Project>{2e3619db-2b50-46e7-a8b2-22b89fc6e1bd}</Project>
       <Name>Drey.Server</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Samples.Server.Services.InMemory\Samples.Server.Services.InMemory.csproj">
-      <Project>{0fa34d3b-98c9-4dac-a977-6c40c1b6e152}</Project>
-      <Name>Samples.Server.Services.InMemory</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
