--- a/tests/Drey.Server.Tests/Drey.Server.Tests.csproj
+++ b/tests/Drey.Server.Tests/Drey.Server.Tests.csproj
@@ -70,10 +70,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fixtures\PackageStore.cs" />
     <Compile Include="NancyTestingBase.cs" />
     <Compile Include="Modules\PackagesModuleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ReleasesModuleTests.cs" />
+    <Compile Include="Resources\Files.Designer.cs">
+      <DependentUpon>Files.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Services\PackageServiceTests.cs" />
     <Compile Include="Services\PackageService\CreateReleaseTests.cs" />
     <Compile Include="Services\PackageService\DeletePackageTests.cs" />
@@ -85,12 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <EmbeddedResource Include="Resources\Files\validzipfile.zip" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\samples\Samples.Server.Services.InMemory\Samples.Server.Services.InMemory.csproj">
-      <Project>{0fa34d3b-98c9-4dac-a977-6c40c1b6e152}</Project>
-      <Name>Samples.Server.Services.InMemory</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\source\Drey.Server\Drey.Server.csproj">
       <Project>{2e3619db-2b50-46e7-a8b2-22b89fc6e1bd}</Project>
       <Name>Drey.Server</Name>
@@ -100,6 +103,12 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Files.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Files.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
