--- a/source/Drey.Server/packages.config
+++ b/source/Drey.Server/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="Nancy" version="1.2.0" targetFramework="net451" />
+  <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
 </packages>
