--- a/source/Drey.Server/Drey.Server.csproj
+++ b/source/Drey.Server/Drey.Server.csproj
@@ -52,17 +52,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="Models\FileDownload.cs" />
     <Compile Include="Models\Package.cs" />
     <Compile Include="Models\Release.cs" />
-    <Compile Include="Modules\well-known\NugetUploadModule.cs" />
-    <Compile Include="Modules\well-known\PackagesModule.cs" />
+    <Compile Include="Modules\NugetUploadModule.cs" />
     <Compile Include="Modules\well-known\ReleasesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\FilesytemFileService.cs" />
     <Compile Include="Services\IFileService.cs" />
     <Compile Include="Services\IPackageService.cs" />
-    <Compile Include="Services\IPackageStore.cs" />
+    <Compile Include="Services\IReleaseStore.cs" />
     <Compile Include="Services\PackageService.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
