--- a/source/Drey.Configuration/packages.config
+++ b/source/Drey.Configuration/packages.config
@@ -8,9 +8,11 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="Nancy" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Hosting.Self" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Validation.DataAnnotations" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Viewengines.Razor" version="1.2.0" targetFramework="net451" />
+  <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.98.0" targetFramework="net451" />
 </packages>
