--- a/tests/Drey.Configuration.Tests/packages.config
+++ b/tests/Drey.Configuration.Tests/packages.config
@@ -4,6 +4,8 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
+  <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
   <package id="Shouldly" version="2.5.0" targetFramework="net451" />
   <package id="xunit" version="2.0.0" targetFramework="net451" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net451" />
