--- a/samples/Samples.AppTwo/Samples.AppTwo.csproj
+++ b/samples/Samples.AppTwo/Samples.AppTwo.csproj
@@ -50,18 +50,14 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Samples.AppTwo.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.targets" />
-  <Target Name="Zip-Binaries">
-    <ItemGroup>
-      <BinDirectoryFiles Include="$(OutputPath)**\*.*" />
-    </ItemGroup>
-    <Zip Files="@(BinDirectoryFiles)" WorkingDirectory="$(OutputPath)" ZipFileName="$(PackagePath)samples.apptwo-$(Version).zip" />
-  </Target>
   <Target Name="BeforeBuild">
     <RemoveDir Directories="$(OutputPath)" />
   </Target>
   <Target Name="AfterBuild">
-    <CallTarget Targets="Zip-Binaries" />
   </Target>
 </Project>
