ShellBase is the class that new apps will derive from to begin startup.

--- a/source/Drey/Drey.csproj
+++ b/source/Drey/Drey.csproj
@@ -50,18 +50,16 @@
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="HordeServiceControl.cs" />
     <Compile Include="ApplicationHostNutConfiguration.cs" />
-    <Compile Include="Nut\CrackingAttribute.cs" />
     <Compile Include="Nut\IApplicationSettings.cs" />
     <Compile Include="Nut\IConnectionStrings.cs" />
     <Compile Include="Nut\IGlobalSettings.cs" />
     <Compile Include="Nut\INutConfiguration.cs" />
     <Compile Include="Nut\IShell.cs" />
-    <Compile Include="Nut\ISupportShutdown.cs" />
     <Compile Include="Nut\DiscoverStartupDllProxy.cs" />
     <Compile Include="Nut\ProxyBase.cs" />
     <Compile Include="Nut\ServerAuthenticationTypes.cs" />
+    <Compile Include="Nut\ShellBase.cs" />
     <Compile Include="Nut\ShellFactory.cs" />
-    <Compile Include="Nut\ShellStartOptions.cs" />
     <Compile Include="Nut\StartupProxy.cs" />
     <Compile Include="PackageEvents\Disposed.cs" />
     <Compile Include="PackageEvents\Load.cs" />
