--- a/source/Drey/Drey.csproj
+++ b/source/Drey/Drey.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Nut\ServerAuthenticationTypes.cs" />
     <Compile Include="Nut\ShellBase.cs" />
     <Compile Include="Nut\ShellFactory.cs" />
+    <Compile Include="Nut\ShellRequestArgs.cs" />
     <Compile Include="Nut\StartupProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\AppDomainUtils.cs" />
