--- a/samples/Samples.Server/packages.config
+++ b/samples/Samples.Server/packages.config
@@ -3,5 +3,6 @@
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="Nancy" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Hosting.Self" version="1.2.0" targetFramework="net451" />
+  <package id="NLog" version="4.0.1" targetFramework="net451" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
 </packages>
