--- a/source/Drey.Configuration/packages.config
+++ b/source/Drey.Configuration/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.5" targetFramework="net451" />
   <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="FluentMigrator" version="1.6.0" targetFramework="net451" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
