- Moved to Owin Self hosting instead of Nancy Self hosting for the sample server project.  - Enabled discovery of the Owin ClaimsPrincipal into Drey.Server.  Nancy in v2 is going to support ClaimsPrincipal, so future-proofing the API by basing decisions on a ClaimsPrincipal vs the IUserIdentity object of Nancy.

--- a/source/Drey.Server/Drey.Server.nuspec
+++ b/source/Drey.Server/Drey.Server.nuspec
@@ -15,6 +15,7 @@
     <dependencies>
       <dependency id="Nancy" version="1.2.0" />
       <dependency id="Nuget.Core" version="2.8.6" />
+      <dependency id="Nancy.MSOwinSecurity" version="1.0.1" />
     </dependencies>
   </metadata>
   <files>
