--- a/samples/Samples.Server/packages.config
+++ b/samples/Samples.Server/packages.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="Nancy" version="1.2.0" targetFramework="net451" />
-  <package id="Nancy.Hosting.Self" version="1.2.0" targetFramework="net451" />
+  <package id="Nancy.Owin" version="1.2.0" targetFramework="net451" />
   <package id="NLog" version="4.0.1" targetFramework="net451" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
 </packages>
