--- a/tests/Drey.Server.Tests/packages.config
+++ b/tests/Drey.Server.Tests/packages.config
@@ -2,10 +2,15 @@
 <packages>
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="FakeItEasy" version="1.25.3" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="Nancy" version="1.2.0" targetFramework="net451" />
+  <package id="Nancy.Owin" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Testing" version="1.2.0" targetFramework="net451" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Shouldly" version="2.5.0" targetFramework="net451" />
   <package id="xunit" version="2.0.0" targetFramework="net451" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net451" />
