--- a/tests/Drey.Server.Tests/packages.config
+++ b/tests/Drey.Server.Tests/packages.config
@@ -9,6 +9,7 @@
   <package id="Nancy" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Owin" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Testing" version="1.2.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Shouldly" version="2.5.0" targetFramework="net451" />
