Reconfigured Hoard to be part of a root folder structure.

--- a/source/Drey.DebugRunner/App.config
+++ b/source/Drey.DebugRunner/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <clear />
-    <add key="horde.directory" value="../../../../horde"/>
+    <add key="WorkingDirectory" value="../../../../ProgramData"/>
     <add key="drey.configuration.consoleport" value="8080" />
   </appSettings>
   <startup>
